--- a/dairy.html
+++ b/dairy.html
@@ -708,9 +708,9 @@
             </div>
             <div class="footer-section social-media">
                 <h4>Follow Us</h4>
-                    <h5><a href="#"><i class="fa fa-facebook-f"></i></a>Facebook</h5>
-                    <h5><a href="#"><i class="fa fa-twitter"></i></a>Twitter</h5>
-                    <h5><a href="#"><i class="fa fa-instagram"></i></a>Instagram</h5>
+                <h5><a href="#"><i class="fa fa-facebook-f"></i>Facebook</a></h5>
+                <h5><a href="#"><i class="fa fa-twitter"></i>Twitter</a></h5>
+                <h5><a href="#"><i class="fa fa-instagram"></i>Instagram</a></h5>
             </div>
         </div>
         <div class="footer-bottom">
